--- a/Fall2022.md
+++ b/Fall2022.md
@@ -11,8 +11,8 @@ Date  |  Speaker                                            |  Title            
 26-Oct   | No PO Seminar Today                           |  TBA                                                           |  Zoom & ESB 5104
 2-Nov    | No PO Seminar Today                           |  TBA                                                           |  Zoom & ESB 5104
 9-Nov    | Youran Li                                     |  Estimate meridional internal wave energy fluxes in the Southern Ocean via a high-resolution, eddy and tide resolving simulation                                                           |  Zoom & ESB 5108
-16-Nov   | Kathryn Smith                                 |  TBA                                                           |  Zoom & ESB 5108
-23-Nov   | Paul Myers                                    |  TBA                                                           |  Zoom & ESB 5104
+16-Nov   | Kathryn Smith                                 |  Looking at coastal zones from a bird's eye view               |  Zoom & ESB 5108
+23-Nov   | Paul Myers                                    |  Oceanic exchange between the Arctic and Atlantic Oceans, linked by the Canadian North      |  Zoom & ESB 5104
 30-Nov   | Juliana Marson                                |  TBA                                                           |  Zoom & ESB 5104
 7-Dec    | Grant Francis                                 |  TBA                                                           |  Zoom & ESB 5104
 14-Dec   | Brandom McNabb                                |  Happy Christmas everybody!                                    |  Zoom & ESB 5104
