--- a/Fall2022.md
+++ b/Fall2022.md
@@ -2,7 +2,7 @@ Date  |  Speaker                                            |  Title            
 ---------|-----------------------------------------------------|---------------------------------------------------------------------------------------------------------------------|------
 31-Aug   | No PO Seminar!                                |  N/A                                                           |  Zoom & ESB 5106
 7-Sep    | No PO Seminar!                                |  N/A                                                           |  Zoom & ESB 5104
-14-Sep   | New Student Carnival                          |  TBA                                                           |  Zoom & ESB 5104
+14-Sep   | New Student Carnival                          |  New Student Carnival                                          |  Zoom & ESB 5104
 21-Sep   | Krysten Rutherford                            |  Elucidating transport timescales and pathways: An exploration of modeling studies of Canadian coastal waters.                                          |  Zoom & ESB 5104
 28-Sep   | Sam Stevens                                   |  Swish floats - designing, testing, and implementing an inexpensive neutrally buoyant float system to track subsurface dispersion in Canadian water. |  Zoom & ESB 5104
 5-Oct    | Ed Mason                                      |  Fractal Analysis of Coastal Drifter Trajectories              |  Zoom & ESB 5104
