fall seminar - new dates

--- a/Fall2024.md
+++ b/Fall2024.md
@@ -1,9 +1,18 @@
 Date  |  Title                                            |  Speaker                                                                                                |  Room
 ---------|-----------------------------------------------------|---------------------------------------------------------------------------------------------------------------------|------
-02-Sept  | No Seminar - Labour Day
-09-Sept  | TBD | Vicente Valenzuela | Zoom & ESB 5104
-16-Sept  | TBD | Kate Schuler | Zoom & ESB 5104
-23-Sept  | TBD | Sacchi VP | Zoom & ESB 5104
-30-Sept  | TBD | Becca Beutel | Zoom & ESB 5104
-07-Oct  | TBD | Morgan Griffith | Zoom & ESB 5104
-14-Oct  | No Seminar - Thanksgiving
+05-Sept | New Student Carnival (tentative) | 
+12-Sept | TBD | Vicente Valenzuela | Zoom & ESB 5104
+19-Sept | TBD | Kate Schuler | Zoom & ESB 5104
+26-Sept | TBD | Sacchi VP | Zoom & ESB 5104
+03-Oct | TBD | Becca Beutel | Zoom & ESB 5104
+10-Oct | TBD | Morgan Griffith | Zoom & ESB 5104
+17-Oct |
+24-Oct |
+31-Oct |
+07-Nov |
+14-Nov |
+21-Nov |
+28-Nov |
+05-Dec |
+12-Dec |
+19-Dec |
