--- a/Fall2024.md
+++ b/Fall2024.md
@@ -3,7 +3,7 @@ Date  |  Title                                            |  Speaker            
 05-Sept | New Student Carnival (tentative) | 
 12-Sept | TBD | Vicente Valenzuela | Zoom & ESB 5104
 19-Sept | TBD | Kate Schuler | Zoom & ESB 5104
-26-Sept | TBD | Sacchi VP | Zoom & ESB 5104
+26-Sept | TBD | Sacchi Pillai | Zoom & ESB 5104
 03-Oct | TBD | Becca Beutel | Zoom & ESB 5104
 10-Oct | TBD | Morgan Griffith | Zoom & ESB 5104
 17-Oct |
