No seminar Aug 5

--- a/Fall2024.md
+++ b/Fall2024.md
@@ -1,6 +1,6 @@
 Date  |  Title                                            |  Speaker                                                                                                |  Room
 ---------|-----------------------------------------------------|---------------------------------------------------------------------------------------------------------------------|------
-05-Sept | New Student Carnival (tentative) | 
+05-Sept | No Seminar | 
 12-Sept | TBD | Vicente Valenzuela | Zoom & ESB 5104
 19-Sept | TBD | Kate Schuler | Zoom & ESB 5104
 26-Sept | TBD | Sacchi Pillai | Zoom & ESB 5104
