--- a/Fall2024.md
+++ b/Fall2024.md
@@ -1,7 +1,7 @@
 Date  |  Title                                            |  Speaker                                                                                                |  Room
 ---------|-----------------------------------------------------|---------------------------------------------------------------------------------------------------------------------|------
 05-Sept | No Seminar | 
-12-Sept | TBD | Vicente Valenzuela | Zoom & ESB 5104
+12-Sept | Bamfield - Turbulence in Junction Passage | Vicente Valenzuela | Zoom & ESB 5104
 19-Sept | TBD | Kate Schuler | Zoom & ESB 5104
 26-Sept | TBD | Sacchi Pillai | Zoom & ESB 5104
 03-Oct | TBD | Becca Beutel | Zoom & ESB 5104
