--- a/Fall2024.md
+++ b/Fall2024.md
@@ -5,7 +5,7 @@ Date  |  Title                                            |  Speaker            
 19-Sept | TBD | Kate Schuler | Zoom & ESB 5104
 26-Sept | TBD | Sacchi Pillai | Zoom & ESB 5104
 03-Oct | TBD | Becca Beutel | Zoom & ESB 5104
-10-Oct | TBD | Morgan Griffith | Zoom & ESB 5104
+10-Oct |
 17-Oct |
 24-Oct |
 31-Oct |
