new student carnival

--- a/Fall2024.md
+++ b/Fall2024.md
@@ -2,7 +2,7 @@ Date  |  Title                                            |  Speaker            
 ---------|-----------------------------------------------------|---------------------------------------------------------------------------------------------------------------------|------
 05-Sept | No Seminar | 
 12-Sept | Bamfield - Turbulence in Junction Passage | Vicente Valenzuela | Zoom & ESB 5104
-19-Sept | TBD | Kate Schuler | Zoom & ESB 5104
+19-Sept | New Student Carnival | Kat Benevides & Aidan Parfett | Zoom & ESB 5104
 26-Sept | TBD | Sacchi Pillai | Zoom & ESB 5104
 03-Oct | TBD | Becca Beutel | Zoom & ESB 5104
 10-Oct |
