--- a/Fall2024.md
+++ b/Fall2024.md
@@ -3,7 +3,7 @@ Date  |  Title                                            |  Speaker            
 05-Sept | No Seminar | 
 12-Sept | Bamfield - Turbulence in Junction Passage | Vicente Valenzuela | Zoom & ESB 5104
 19-Sept | New Student Carnival | Kat Benevides & Aidan Parfett | Zoom & ESB 5104
-26-Sept | TBD | Sacchi Pillai | Zoom & ESB 5104
+26-Sept | Hyperspectral Signatures Of Phytoplankton Taxonomy And Photo-Physiology In A Coastal Upwelling Regime | Sacchi Pillai | Zoom & ESB 5104
 03-Oct | TBD | Becca Beutel | Zoom & ESB 5104
 10-Oct | TBD | Morgan Griffith | Zoom & ESB 5104
 17-Oct |
