--- a/Fall2024.md
+++ b/Fall2024.md
@@ -5,9 +5,9 @@ Date  |  Title                                            |  Speaker            
 19-Sept | New Student Carnival | Kat Benevides & Aidan Parfett | Zoom & ESB 5104
 26-Sept | Hyperspectral Signatures Of Phytoplankton Taxonomy And Photo-Physiology In A Coastal Upwelling Regime | Sacchi Pillai | Zoom & ESB 5104
 03-Oct | TBD | Becca Beutel | Zoom & ESB 5104
-10-Oct | TBD | Morgan Griffith | Zoom & ESB 5104
+10-Oct | 
 17-Oct |
-24-Oct |
+24-Oct | TBD | Becca Rust | Zoom & ESB 5104
 31-Oct |
 07-Nov |
 14-Nov |
