--- a/Fall2024.md
+++ b/Fall2024.md
@@ -1,18 +1,18 @@
 Date  |  Title                                            |  Speaker                                                                                                |  Room
 ---------|-----------------------------------------------------|---------------------------------------------------------------------------------------------------------------------|------
-05-Sept | No Seminar | 
+05-Sept | No seminar | 
 12-Sept | Bamfield - Turbulence in Junction Passage | Vicente Valenzuela | Zoom & ESB 5104
 19-Sept | New Student Carnival | Kat Benevides & Aidan Parfett | Zoom & ESB 5104
 26-Sept | Hyperspectral Signatures Of Phytoplankton Taxonomy And Photo-Physiology In A Coastal Upwelling Regime | Sacchi Pillai | Zoom & ESB 5104
-03-Oct | TBD | Becca Beutel | Zoom & ESB 5104
-10-Oct | 
-17-Oct |
+03-Oct | Converting research to outreach - takeaways from Discovering DIY Oceanography: building floats to track deep ocean currents | Becca Beutel | Zoom & ESB 5104
+10-Oct | No seminar
+17-Oct | TBD |
 24-Oct | TBD | Becca Rust | Zoom & ESB 5104
-31-Oct |
-07-Nov |
-14-Nov |
-21-Nov |
-28-Nov |
-05-Dec |
-12-Dec |
-19-Dec |
+31-Oct | TBD |
+07-Nov | TBD | Lauryn Talbot | Zoom & ESB 5104
+14-Nov | TBD | Yayla Sezginger | Zoom & ESB 5104
+21-Nov | TBD |
+28-Nov | TBD | Paul Myers | Zoom & ESB 5104
+05-Dec | TBD |
+12-Dec | TBD |
+19-Dec | TBD |
