--- a/Fall2024.md
+++ b/Fall2024.md
@@ -5,14 +5,13 @@ Date  |  Title                                            |  Speaker            
 19-Sept | New Student Carnival | Kat Benevides & Aidan Parfett | Zoom & ESB 5104
 26-Sept | Hyperspectral Signatures Of Phytoplankton Taxonomy And Photo-Physiology In A Coastal Upwelling Regime | Sacchi Pillai | Zoom & ESB 5104
 03-Oct | Converting research to outreach - takeaways from Discovering DIY Oceanography: building floats to track deep ocean currents | Becca Beutel | Zoom & ESB 5104
-10-Oct | No seminar
-17-Oct | TBD |
-24-Oct | TBD | Becca Rust | Zoom & ESB 5104
-31-Oct | TBD |
+10-Oct | PO Grad Student Social | 5th floor ESB
+17-Oct | TBD | Rich Pawlowicz
+24-Oct | TBD |
+31-Oct | TBD | Becca Rust | Zoom & ESB 5104
 07-Nov | TBD | Lauryn Talbot | Zoom & ESB 5104
 14-Nov | TBD | Yayla Sezginger | Zoom & ESB 5104
-21-Nov | TBD |
+21-Nov | TBD | Hal Bradbury | Zoom & ESB 5104
 28-Nov | TBD | Paul Myers | Zoom & ESB 5104
-05-Dec | TBD |
+05-Dec | TBD | 
 12-Dec | TBD |
-19-Dec | TBD |
