--- a/Fall2024.md
+++ b/Fall2024.md
@@ -5,7 +5,7 @@ Date  |  Title                                            |  Speaker            
 19-Sept | New Student Carnival | Kat Benevides & Aidan Parfett | Zoom & ESB 5104
 26-Sept | Hyperspectral Signatures Of Phytoplankton Taxonomy And Photo-Physiology In A Coastal Upwelling Regime | Sacchi Pillai | Zoom & ESB 5104
 03-Oct | Converting research to outreach - takeaways from Discovering DIY Oceanography: building floats to track deep ocean currents | Becca Beutel | Zoom & ESB 5104
-10-Oct | PO Grad Student Social | 5th floor ESB
+10-Oct | PO Grad Student Social | | 5th floor ESB
 17-Oct | TBD | Rich Pawlowicz
 24-Oct | TBD |
 31-Oct | TBD | Becca Rust | Zoom & ESB 5104
