--- a/Fall2024.md
+++ b/Fall2024.md
@@ -6,7 +6,7 @@ Date  |  Title                                            |  Speaker            
 26-Sept | Hyperspectral Signatures Of Phytoplankton Taxonomy And Photo-Physiology In A Coastal Upwelling Regime | Sacchi Pillai | Zoom & ESB 5104
 03-Oct | Converting research to outreach - takeaways from Discovering DIY Oceanography: building floats to track deep ocean currents | Becca Beutel | Zoom & ESB 5104
 10-Oct | PO Grad Student Social | - | 5th floor ESB
-17-Oct | TBD | Rich Pawlowicz | Zoom & ESB 5104
+17-Oct | Anthropogenic reactive nitrogen inputs to the ocean, including the Strait of Georgia | Rich Pawlowicz | Zoom & ESB 5104
 24-Oct | TBD | TBD
 31-Oct | TBD | Becca Rust | Zoom & ESB 5104
 07-Nov | TBD | Lauryn Talbot | Zoom & ESB 5104
