--- a/Fall2024.md
+++ b/Fall2024.md
@@ -7,11 +7,11 @@ Date  |  Title                                            |  Speaker            
 03-Oct | Converting research to outreach - takeaways from Discovering DIY Oceanography: building floats to track deep ocean currents | Becca Beutel | Zoom & ESB 5104
 10-Oct | PO Grad Student Social | - | 5th floor ESB
 17-Oct | Anthropogenic reactive nitrogen inputs to the ocean, including the Strait of Georgia | Rich Pawlowicz | Zoom & ESB 5104
-24-Oct | TBD | TBD
+24-Oct | No Seminar |
 31-Oct | TBD | Becca Rust | Zoom & ESB 5104
 07-Nov | TBD | Lauryn Talbot | Zoom & ESB 5104
 14-Nov | TBD | Yayla Sezginger | Zoom & ESB 5104
 21-Nov | TBD | Hal Bradbury | Zoom & ESB 5104
 28-Nov | TBD | Paul Myers | Zoom & ESB 5104
-05-Dec | TBD | TBD
+05-Dec | TBD | Cassidy Donaldson | Zoom & ESB 5104
 12-Dec | TBD | TBD
