--- a/Fall2024.md
+++ b/Fall2024.md
@@ -7,7 +7,7 @@ Date  |  Title                                            |  Speaker            
 03-Oct | Converting research to outreach - takeaways from Discovering DIY Oceanography: building floats to track deep ocean currents | Becca Beutel | Zoom & ESB 5104
 10-Oct | PO Grad Student Social | - | 5th floor ESB
 17-Oct | Anthropogenic reactive nitrogen inputs to the ocean, including the Strait of Georgia | Rich Pawlowicz | Zoom & ESB 5104
-24-Oct | No Seminar |
+24-Oct | No seminar |
 31-Oct | TBD | Becca Rust | Zoom & ESB 5104
 07-Nov | TBD | Lauryn Talbot | Zoom & ESB 5104
 14-Nov | TBD | Yayla Sezginger | Zoom & ESB 5104
