--- a/Fall2024.md
+++ b/Fall2024.md
@@ -14,4 +14,4 @@ Date  |  Title                                            |  Speaker            
 21-Nov | TBD | Hal Bradbury | Zoom & ESB 5104
 28-Nov | TBD | Paul Myers | Zoom & ESB 5104
 05-Dec | TBD | Cassidy Donaldson | Zoom & ESB 5104
-12-Dec | TBD | TBD
+12-Dec | TBD | Nickson Mak | Zoom& ESB 5104
