--- a/Fall2024.md
+++ b/Fall2024.md
@@ -9,7 +9,7 @@ Date  |  Title                                            |  Speaker            
 17-Oct | Anthropogenic reactive nitrogen inputs to the ocean, including the Strait of Georgia | Rich Pawlowicz | Zoom & ESB 5104
 24-Oct | No seminar |
 31-Oct | Examine spatial and temporal variability in CH4 and N2O off the west coast of Vancouver Island | Becca Rust | Zoom & ESB 5104
-07-Nov | TBD | Lauryn Talbot | Zoom & ESB 5104
+07-Nov | Surprising depth coherent temperature variability along Line P using gliders | Lauryn Talbot | Zoom & ESB 5104
 14-Nov | TBD | Yayla Sezginger | Zoom & ESB 5104
 21-Nov | TBD | Hal Bradbury | Zoom & ESB 5104
 28-Nov | TBD | Paul Myers | Zoom & ESB 5104
