--- a/Fall2024.md
+++ b/Fall2024.md
@@ -10,7 +10,7 @@ Date  |  Title                                            |  Speaker            
 24-Oct | No seminar |
 31-Oct | Examine spatial and temporal variability in CH4 and N2O off the west coast of Vancouver Island | Becca Rust | Zoom & ESB 5104
 07-Nov | Surprising depth coherent temperature variability along Line P using gliders | Lauryn Talbot | Zoom & ESB 5104
-14-Nov | TBD | Yayla Sezginger | Zoom & ESB 5104
+14-Nov | Photosynthetic ‘currency’ exchange within a mosaic of Fe limitation in the California Current Upwelling System | Yayla Sezginger | Zoom & ESB 5104
 21-Nov | TBD | Hal Bradbury | Zoom & ESB 5104
 28-Nov | TBD | Paul Myers | Zoom & ESB 5104
 05-Dec | TBD | Cassidy Donaldson | Zoom & ESB 5104
