--- a/Fall2024.md
+++ b/Fall2024.md
@@ -12,6 +12,6 @@ Date  |  Title                                            |  Speaker            
 07-Nov | Surprising depth coherent temperature variability along Line P using gliders | Lauryn Talbot | Zoom & ESB 5106
 14-Nov | Atlantic meridional overturning circulation under warm climate | Benoit Thibodeau | Zoom & ESB 5106
 21-Nov | Reconstructing paleo-bottom water oxygen concentrations in the North Atlantic | Hal Bradbury | Zoom & ESB 5104
-28-Nov | TBD | Paul Myers | Zoom & ESB 5104
+28-Nov | High resolution ocean general circulation model experiments to explore climate questions in the Arctic Ocean and Labrador Sea | Paul Myers | Zoom & ESB 5104
 05-Dec | TBD | Cassidy Donaldson | Zoom & ESB 5104
 12-Dec | TBD | Nickson Mak | Zoom & ESB 5104
