--- a/Fall2024.md
+++ b/Fall2024.md
@@ -15,3 +15,4 @@ Date  |  Title                                            |  Speaker            
 28-Nov | High resolution ocean general circulation model experiments to explore climate questions in the Arctic Ocean and Labrador Sea | Paul Myers | Zoom & ESB 5104
 05-Dec | TBD | Cassidy Donaldson | Zoom & ESB 5104
 12-Dec | TBD | Nickson Mak | Zoom & ESB 5104
+19-Dec | No seminar - Exams
