--- a/Fall2024.md
+++ b/Fall2024.md
@@ -16,3 +16,4 @@ Date  |  Title                                            |  Speaker            
 05-Dec | TBD | Cassidy Donaldson | Zoom & ESB 5104
 12-Dec | TBD | Nickson Mak | Zoom & ESB 5104
 19-Dec | No seminar - Exams
+26-Dec | No seminar - Holidays
