--- a/Fall2024.md
+++ b/Fall2024.md
@@ -13,7 +13,7 @@ Date  |  Title                                            |  Speaker            
 14-Nov | Atlantic meridional overturning circulation under warm climate | Benoit Thibodeau | Zoom & ESB 5106
 21-Nov | Reconstructing paleo-bottom water oxygen concentrations in the North Atlantic | Hal Bradbury | Zoom & ESB 5104
 28-Nov | High resolution ocean general circulation model experiments to explore climate questions in the Arctic Ocean and Labrador Sea | Paul Myers | Zoom & ESB 5104
-05-Dec | TBD | Cassidy Donaldson | Zoom & ESB 5104
+05-Dec | No seminar |
 12-Dec | TBD | Nickson Mak | Zoom & ESB 5104
 19-Dec | No seminar - Exams
 26-Dec | No seminar - Holidays
