--- a/Fall2024.md
+++ b/Fall2024.md
@@ -14,6 +14,6 @@ Date  |  Title                                            |  Speaker            
 21-Nov | Reconstructing paleo-bottom water oxygen concentrations in the North Atlantic | Hal Bradbury | Zoom & ESB 5104
 28-Nov | High resolution ocean general circulation model experiments to explore climate questions in the Arctic Ocean and Labrador Sea | Paul Myers | Zoom & ESB 5104
 05-Dec | No seminar |
-12-Dec | TBD | Nickson Mak | Zoom & ESB 5104
+12-Dec | Characterization and Analysis of Particle Size Distribution in the Strait of Georgia | Nickson Mak | Zoom & ESB 5104
 19-Dec | No seminar - Exams
 26-Dec | No seminar - Holidays
