--- a/Fall2024.md
+++ b/Fall2024.md
@@ -15,5 +15,4 @@ Date  |  Title                                            |  Speaker            
 28-Nov | High resolution ocean general circulation model experiments to explore climate questions in the Arctic Ocean and Labrador Sea | Paul Myers | Zoom & ESB 5104
 05-Dec | No seminar |
 12-Dec | Characterization and Analysis of Particle Size Distribution in the Strait of Georgia | Nickson Mak | Zoom & ESB 5104
-19-Dec | No seminar - Exams
-26-Dec | No seminar - Holidays
+19-Dec | No seminar - Exams / End of term
